--- a/JS_DOM_5/style.css
+++ b/JS_DOM_5/style.css
@@ -37,11 +37,13 @@ main{
 
 #pic i{
   position: absolute;
-  top: 41%;
-  left: 46.5%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(0) rotate(-60deg);
   font-size: 120px;
   color: red;
   opacity: 0;
+  transition: all ease 0.4s;
 }
 
 #name{
