--- a/JS_DOM_6/style.css
+++ b/JS_DOM_6/style.css
@@ -10,3 +10,45 @@ body {
   height: 100%;
 }
 
+main{
+  width: 100%;
+  height: 100%;
+  background: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+#card1{
+  width: 300px;
+  height: 450px;
+  background: white;
+  border-radius: 15px;
+  padding: 15px;
+  text-align: center;
+  
+}
+
+#card1 img{
+  border-radius: 15px;
+  object-fit: cover;
+  width: 100%;
+}
+
+#card1 #name{
+  font-size: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 15px;
+}
+
+#card1 #profession{
+  color: red;
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 10px;
+}
+
+#card1 #description{
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
