--- a/JS_DOM_Piano/style.css
+++ b/JS_DOM_Piano/style.css
@@ -33,8 +33,14 @@ main #bg #top {
   height: 20%;
   width: 100%;
   background: black;
+  color: white;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
+main #bg #top #volumeSlider {
+  -webkit-appearance: none;
+  width: 200px;
+  height: 10px;
+}
 main #bg #keys {
   height: 80%;
   width: 100%;
@@ -53,4 +59,20 @@ main #bg #keys {
   justify-content: center;
   align-items: center;
   align-items: end;
+}
+
+::-webkit-slider-runnable-track {
+  width: 100%;
+  background: white;
+  cursor: pointer;
+}
+
+#volumeSlider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  border: 2px solid;
+  background-color: white;
+  cursor: grab;
+  height: 10px;
+  width: 10px;
+  border-radius: 100%;
 }/*# sourceMappingURL=style.css.map */
