--- a/JS_DOM_Piano/style.scss
+++ b/JS_DOM_Piano/style.scss
@@ -37,6 +37,15 @@ main{
             height: 20%;
             width: 100%;
             background: black;
+            color: white;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+            #volumeSlider{
+                -webkit-appearance: none;
+                width: 200px;
+                height: 10px;
+            }
+
         }
 
         #keys{
@@ -61,3 +70,19 @@ main{
 
     
 }   
+
+::-webkit-slider-runnable-track{
+    width: 100%;
+    background: white;
+    cursor: pointer;
+}
+
+#volumeSlider::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    border: 2px solid;
+    background-color: white;
+    cursor: grab;
+    height: 10px;
+    width: 10px;
+    border-radius: 100%;
+}
