--- a/Advance_CSS/LEC_1_Card_Animation/style.css
+++ b/Advance_CSS/LEC_1_Card_Animation/style.css
@@ -30,13 +30,5 @@ body{
 .box{
     height: 400px;
     width: 300px;
-    box-shadow: 0 0 80px rgb(47, 255, 0);
-    animation: changeBackgroundColor 5s infinite forwards alternate;
-}
-
-h1{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3rem;
-    color: black;
-    text-shadow: 10px 10px 5px red;
+    background: red;
 }
